[박준호] 04-07 16:31 order-service 추가 + main-service 뷰 고친거 올림.

--- a/main-service/Dockerfile
+++ b/main-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11-ea-jdk-slim
 VOLUME /tmp
-COPY build/libs/main-service-1.0.jar MainService.jar
-ENTRYPOINT ["java", "-jar", "MainService.jar"]
+COPY build/libs/menu-service-1.0.jar MenuService.jar
+ENTRYPOINT ["java", "-jar", "MenuService.jar"]
