[박현민] approve 수정 manage 확인 product 수정

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
       server:
         git:
           uri: https://github.com/justdoplzz/msa-config-repo.git   #Github Repository 주소
-#         uri: https://github.com/Advanc2d/msa-configuration.git   #Github Repository 주소
+#         uri: https://github.com/Advanc2d/msa-configuration.git   #Docker 확인용 주소
          
