--- a/main-service/build.gradle
+++ b/main-service/build.gradle
@@ -31,6 +31,7 @@ dependencies {
    implementation 'org.keycloak:keycloak-spring-boot-starter'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect' /* Thymeleaf Layout */
+   implementation 'org.springframework.kafka:spring-kafka' /*Kafka*/
    
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
