--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11-ea-jdk-slim
 VOLUME /tmp
-COPY build/libs/loan-service-1.0.jar LoanService.jar
-ENTRYPOINT ["java", "-jar", "LoanService.jar"]
+COPY build/libs/order-service-1.0.jar OrderService.jar
+ENTRYPOINT ["java", "-jar", "OrderService.jar"]
