--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11-ea-jdk-slim
 VOLUME /tmp
-COPY build/libs/config-server-1.0.jar config.jar
-ENTRYPOINT ["java", "-jar", "config.jar"]
+COPY build/libs/config-server-1.0.jar ConfigServer.jar
+ENTRYPOINT ["java", "-jar", "ConfigServer.jar"]
